--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,14 @@
-DATABASE=car-rental
-HOST=localhost
-PASSWORD=postgres
-PORT=5432
-USER=postgres
+# DATABASE=car-rental
+# HOST=localhost
+# PASSWORD=postgres
+# PORT=5432
+# USER=postgres
+
+DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+PGDATABASE=railway
+PGHOST=containers-us-west-178.railway.app
+PGPASSWORD=wZogi4k4QI8jw66EzJwE
+PGPORT=5566
+PGUSER=postgres
 API_SECRET=secretpassword
 TOKEN_HOUR_LIFESPAN=1
