--- a/config/.env
+++ b/config/.env
@@ -1,9 +1,12 @@
+# Local Environment
 # DATABASE=car-rental
 # HOST=localhost
 # PASSWORD=postgres
 # PORT=5432
 # USER=postgres
 
+
+# Production Environment
 DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
 PGDATABASE=railway
 PGHOST=containers-us-west-178.railway.app
